sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:12: error: not found: value échange
      	échange(j,j+1)
        ^